<resources>
    <string name="app_name">Certificate Generator</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="not_member">Not a member yet?</string>
    <string name="click_to_register"> Not a member yet? Sign up</string>
    <string name="logout">LOGOUT</string>
    <string name="Barangay"> BARANGAY BANGCUD</string>
    <string name="lower"> CERTIFICATE GENERATOR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">open nav</string>
    <string name="close_nav">close nav</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="search">Search</string>
    <string name="add_resident">Add Resident</string>
    <string name="delete_resident">Delete Resident</string>
    <string name="edit_resident">Edit Resident</string>
    <string name="login_with_google">Login with Google</string>
    <string-array name="options_array">
        <item>Upload Profile</item>
        <item>Camera</item>
        <item>Photo/Gallery</item>
    </string-array>

</resources>