<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/background"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20px"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:text="@string/Barangay"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/lower"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#A52F2F"
            android:hint="@string/email">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:backgroundTint="#008000"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/login"
        android:textSize="16sp">

    </Button>

    <TextView
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/registerNow"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>






</LinearLayout>